objects/OpportunityLineItem.object
<CustomObject><fields>
        <fullName>ACF_Alternate_Name__c</fullName>
        <description>From Pivotal Migration, Alternate product name.</description>
        <inlineHelpText>From Pivotal Migration, Alternate product name.</inlineHelpText>
        <label>Alternate Name</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ACF_Display_Units__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Units</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Pivotal_ID__c</fullName>
        <externalId>true</externalId>
        <label>Pivotal ID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds></CustomObject>